fix: post-merge integration bugs found during v1.13.0 release verification
Two real bugs, neither visible to any single PR in isolation:

- ApiKeyService.resolveProjectNames() returned Map.of() for the
  no-restrictions case. Map.of()'s .get() eagerly requireNonNull()s the
  key and throws NPE for a null key — which every unrestricted API key
  (the common case) hits via toDTO's projectNames.get(key.getRestricted
  ToProjectId()). Would have crashed API key listing in production for
  nearly every real deployment. Fixed with Collections.emptyMap(), which
  tolerates a null-key .get() like a plain HashMap does.

- RetroBoard.merge.test.tsx's '../../contexts' mock only provided
  useToast. After merging the presence-indicator work, RetroBoard.tsx
  now also calls usePresence(), which needs useAuth from that same
  barrel — the mock predated that dependency. Added useAuth to the mock,
  reusing the existing authState so both mocks stay in sync.